# new02

Task_02_1/: CMakeLists.txt  main.cpp
